<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GPStrack</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="WIFI">WIFI</string>
    <string name="GPS">GPS</string>
    <string name="START">START</string>
    <string name="STOP">STOP</string>
    <string name="GPSWIFI">GPS &amp; WIFI</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="accuracy">Accuracy</string>
    <string name="defaultzero">0.0</string>

</resources>